Removed spaces in java text- Nahom

--- a/src/main/resources/Languages/java.txt
+++ b/src/main/resources/Languages/java.txt
@@ -7,7 +7,7 @@ while (i > 0)
 System.out.println("Hello World!");
 public class Main {
     public static void main(String[] args) {
-        System.out.println(\"Hello World\");
+        System.out.println("Hello World");
     }
 }
 void finish(String name){
@@ -42,15 +42,15 @@ public enum Wood {
     MAPLE, COCOBOLO, CEDAR, ADIRONDACK, ALDER, SITKA;}
 public String toString() {
     switch(this) {
-        case INDIAN_ROSEWOOD: return \"Indian Rosewood\";
-        case BRAZILIAN_ROSEWOOD: return \"Brazilian Rosewood\";
-        case MAHOGANY: return \"Mahogany\";
-        case MAPLE: return \"Maple\";
-        case COCOBOLO: return \"Cocobolo\";
-        case CEDAR: return \"Cedar\";
-        case ADIRONDACK: return \"Adirondack\";
-        case ALDER: return \"Alder\";
-        case SITKA: return \"Sitka\";
-        default: return \"Any\";
+        case INDIAN_ROSEWOOD: return "Indian Rosewood";
+        case BRAZILIAN_ROSEWOOD: return "Brazilian Rosewood";
+        case MAHOGANY: return "Mahogany";
+        case MAPLE: return "Maple";
+        case COCOBOLO: return "Cocobolo";
+        case CEDAR: return "Cedar";
+        case ADIRONDACK: return "Adirondack";
+        case ALDER: return "Alder";
+        case SITKA: return "Sitka";
+        default: return "Any";
     }
 }
